--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@swc/core": "^1.10.14",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
